[package]
name = "gse-gen"
version = "2.0.0"
edition = "2021"

[[bin]]
name = "gse-gen"
path = "src/main.rs"

[dependencies]
anyhow     = "1"
clap       = { version = "4", features = ["derive", "env"] }
colored    = "2"
futures    = "0.3"
indicatif  = { version = "0.17", features = ["tokio"] }
regex      = "1"
reqwest    = { version = "0.12", features = ["json"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tokio      = { version = "1", features = ["full"] }
urlencoding = "2"
